--- a/generic/.golangci.yml
+++ b/generic/.golangci.yml
@@ -1,5 +1,5 @@
 run:
-  go: "1.17"
+  go: "1.18"
   timeout: 5m
   issues-exit-code: 1
   tests: true
@@ -7,6 +7,8 @@ run:
   modules-download-mode: vendor
 
 linters:
+  disable:
+    - structcheck # this is disabled because v1.45 is showing a lot of false positives
   enable:
     - revive
     - gofmt
