Go 1.18 generics for lazylru (#14)
The current version of the cache uses `string` as the key and `interface{}` as the value. That fits the use case for which it was designed, but it is not as flexible as it could be. Go 1.18 generics created an opportunity to do change that.

The [container/heap](https://pkg.go.dev/container/heap) in the standard library doesn't support generics. I'm sure it will at some point, but for now, the source code was copied from the standard libary and made generic. The `pq` and `lazylru` components were copied into a subpackage, `generic`. While the internals of the library (and especially the tests) are littered with type annotations, the external interface is pretty clean. Previously, the cache would be used like so:

```go
// import "github.com/TriggerMail/lazylru"

lru := lazylru.New(maxItems, ttl)
lru.Set("key", "value")
if v, ok := lru.Get("key"); ok {
	vstr, ok := v.(string)
	if !ok {
		panic("something terrible has happened")
	}
	fmt.Println(vstr)
}
```

The new version is a bit cleaner:

```go
// import "github.com/TriggerMail/lazylru/generic"

lru := lazylru.NewT[string, string](maxItems, ttl)
lru.Set("key", "value")
if v, ok := lru.Get("key"); ok {
	fmt.Println(v)
}
```

It's expected that the cache is going to be created at the start of a program and accessed many times, so the real win is the lack of casting on the `Get`. It is easy to put in a value when you mean a pointer or a pointer when you mean a value, but the generic version prevents that problem. The `panic` in the sample code above is a maybe overkill, but the caller is likely to do _something_ to deal with type. There is a performance impact to the casting, but it doesn't appear to be huge.

In terms of caching performance, there was an improvement in all cases. I tested the original, interface-based implementation as well as a generic implementation of [string, interface{}] to mimic the interface type as closely as possible and a ge

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -1,28 +1,43 @@
 name: lazylru
 description: lazylru build pipeline
-
 env:
-  HOMEBREW_GITHUB_API_TOKEN: ${HOMEBREW_GITHUB_API_TOKEN}
-  GITHUB_TOKEN: ${GITHUB_TOKEN}
-  GOPRIVATE: github.com/TriggerMail
+  BUILDKITE_PLUGIN_GCR_JSON_KEY: ${BUILDKITE_PLUGIN_GCR_JSON_KEY}
+  EARTHLY_SSH_AUTH_SOCK: "/root/.ssh/ssh-agent.sock"
 
 steps:
-  - label: ":golang: test"
-    artifact_paths: test-results/go-test-report.xml
-    key: "test"
+  - label: "interface-based"
+    key: "interface"
     plugins:
-      - fanduel/gcr#v0.1.2:
+      - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
           login: true
-      - docker#v3.8.0:
-          image: us.gcr.io/bluecore-ops/dockerfiles/golang:dev-1.17
-          entrypoint: ""
-          workdir: /app
-          entrypoint: ""
-          command:
-          - scripts/ci/test.sh
-          propagate-environment: true
-          volumes:
-            - "/root/.ssh/:/root/.ssh/"
+    agents:
+      queue: vmserver
+    env:
+      COVERALLS_TOKEN: ${COVERALLS_TOKEN}
+    command: "earthly --secret COVERALLS_TOKEN +ci-interface --BUILD_NUMBER=$BUILDKITE_BUILD_NUMBER"
+    artifact_paths: test-results/interface/*.xml
+  - label: "bench"
+    key: "bench"
+    plugins:
+      - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
+          login: true
+    agents:
+      queue: vmserver
+    env:
+      COVERALLS_TOKEN: ${COVERALLS_TOKEN}
+    command: "earthly --secret COVERALLS_TOKEN +ci-bench --BUILD_NUMBER=$BUILDKITE_BUILD_NUMBER"
+    artifact_paths: test-results/bench/*.xml
+  - label: "generic"
+    key: "generic"
+    plugins:
+      - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
+          login: true
+    agents:
+      queue: vmserver
+    env:
+      COVERALLS_TOKEN: ${COVERALLS_TOKEN}
+    command: "earthly --secret COVERALLS_TOKEN +ci-generic --BUILD_NUMBER=$BUILDKITE_BUILD_NUMBER"
+    artifact_paths: test-results/generic/*.xml
   - label: ":golang: release"
     key: "release"
     agents:
@@ -33,9 +48,21 @@ steps:
           login: true
     if: build.tag =~ /v[0-9]+(\.[0-9]+)*(-.*)*/
     depends_on:
-      - "test"
+      - "generic"
+      - "interface"
   - wait: ~
     continue_on_failure: true
-  - plugins:
+  - label: "collect test results"
+    key: "collect"
+    commands:
+      - "buildkite-agent artifact download test-results/interface/*.xml . --step interface"
+      - "buildkite-agent artifact download test-results/bench/*.xml . --step bench"
+      - "buildkite-agent artifact download test-results/generic/*.xml . --step generic"
+      - "find ./test-results -name 'go-test-*-report.xml' -exec mv {} test-results/ \\;"
+    artifact_paths: test-results/*.xml
+  - label: "report test results"
+    depends_on: "collect"
+    key: "test_results"
+    plugins:
       - junit-annotate#v1.9.0:
-          artifacts: test-results/go-test-report.xml
+          artifacts: test-results/go-test-*.xml
