updating deps, tweaking linter

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,6 +23,10 @@ linters-settings:
       - fieldalignment
     fieldalignment:
       fix: true
+  revive:
+    rules:
+      - name: unused-parameter
+        disabled: true
 
 issues:
   exclude:
