--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -4,65 +4,77 @@ env:
   BUILDKITE_PLUGIN_GCR_JSON_KEY: ${BUILDKITE_PLUGIN_GCR_JSON_KEY}
   EARTHLY_SSH_AUTH_SOCK: "/root/.ssh/ssh-agent.sock"
 
+retry: &retry_spot_instance
+  automatic:
+  - exit_status: -1
+    limit: 3
+  - exit_status: '*'
+    limit: 3
 steps:
-  - label: "interface-based"
-    key: "interface"
-    plugins:
-      - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
-          login: true
-    agents:
-      queue: vmserver
-    env:
-      COVERALLS_TOKEN: ${COVERALLS_TOKEN}
-    command: "earthly --secret COVERALLS_TOKEN +ci-interface --BUILD_NUMBER=$BUILDKITE_BUILD_NUMBER"
-    artifact_paths: test-results/interface/*.xml
-  - label: "bench"
-    key: "bench"
-    plugins:
-      - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
-          login: true
-    agents:
-      queue: vmserver
-    env:
-      COVERALLS_TOKEN: ${COVERALLS_TOKEN}
-    command: "earthly --secret COVERALLS_TOKEN +ci-bench --BUILD_NUMBER=$BUILDKITE_BUILD_NUMBER"
-    artifact_paths: test-results/bench/*.xml
-  - label: "generic"
-    key: "generic"
-    plugins:
-      - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
-          login: true
-    agents:
-      queue: vmserver
-    env:
-      COVERALLS_TOKEN: ${COVERALLS_TOKEN}
-    command: "earthly --secret COVERALLS_TOKEN +ci-generic --BUILD_NUMBER=$BUILDKITE_BUILD_NUMBER"
-    artifact_paths: test-results/generic/*.xml
-  - label: ":golang: release"
-    key: "release"
-    agents:
-      queue: vmserver
-    command: ".buildkite/steps/release"
-    plugins:
-      - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
-          login: true
-    if: build.tag =~ /v[0-9]+(\.[0-9]+)*(-.*)*/
-    depends_on:
-      - "generic"
-      - "interface"
-  - wait: ~
-    continue_on_failure: true
-  - label: "collect test results"
-    key: "collect"
-    commands:
-      - "buildkite-agent artifact download test-results/interface/*.xml . --step interface"
-      - "buildkite-agent artifact download test-results/bench/*.xml . --step bench"
-      - "buildkite-agent artifact download test-results/generic/*.xml . --step generic"
-      - "find ./test-results -name 'go-test-*-report.xml' -exec mv {} test-results/ \\;"
-    artifact_paths: test-results/*.xml
-  - label: "report test results"
-    depends_on: "collect"
-    key: "test_results"
-    plugins:
-      - junit-annotate#v1.9.0:
-          artifacts: test-results/go-test-*.xml
+- label: "interface-based"
+  key: "interface"
+  plugins:
+  - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
+      login: true
+  agents:
+    queue: vmserver
+  env:
+    COVERALLS_TOKEN: ${COVERALLS_TOKEN}
+  command: "earthly --secret COVERALLS_TOKEN +ci-interface --BUILD_NUMBER=$BUILDKITE_BUILD_NUMBER"
+  artifact_paths: test-results/interface/*.xml
+  retry: *retry_spot_instance
+- label: "bench"
+  key: "bench"
+  plugins:
+  - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
+      login: true
+  agents:
+    queue: vmserver
+  env:
+    COVERALLS_TOKEN: ${COVERALLS_TOKEN}
+  command: "earthly --secret COVERALLS_TOKEN +ci-bench --BUILD_NUMBER=$BUILDKITE_BUILD_NUMBER"
+  artifact_paths: test-results/bench/*.xml
+  retry: *retry_spot_instance
+- label: "generic"
+  key: "generic"
+  plugins:
+  - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
+      login: true
+  agents:
+    queue: vmserver
+  env:
+    COVERALLS_TOKEN: ${COVERALLS_TOKEN}
+  command: "earthly --secret COVERALLS_TOKEN +ci-generic --BUILD_NUMBER=$BUILDKITE_BUILD_NUMBER"
+  artifact_paths: test-results/generic/*.xml
+  retry: *retry_spot_instance
+- label: ":golang: release"
+  key: "release"
+  agents:
+    queue: vmserver
+  command: ".buildkite/steps/release"
+  plugins:
+  - ssh://git@github.com/TriggerMail/coveralls-buildkite-plugin#v1.0.4:
+      login: true
+  if: build.tag =~ /v[0-9]+(\.[0-9]+)*(-.*)*/
+  depends_on:
+  - "generic"
+  - "interface"
+  retry: *retry_spot_instance
+- wait:
+  continue_on_failure: true
+- label: "collect test results"
+  key: "collect"
+  commands:
+  - "buildkite-agent artifact download test-results/interface/*.xml . --step interface"
+  - "buildkite-agent artifact download test-results/bench/*.xml . --step bench"
+  - "buildkite-agent artifact download test-results/generic/*.xml . --step generic"
+  - "find ./test-results -name 'go-test-*-report.xml' -exec mv {} test-results/ \\;"
+  artifact_paths: test-results/*.xml
+  retry: *retry_spot_instance
+- label: "report test results"
+  depends_on: "collect"
+  key: "test_results"
+  plugins:
+  - junit-annotate#v1.9.0:
+      artifacts: test-results/go-test-*.xml
+  retry: *retry_spot_instance
