--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,13 +18,22 @@ jobs:
       with:
         go-version: '1.23'
 
+    - name: Go Tidy
+      run: go mod tidy && git diff --exit-code
+
+    - name: Go Mod
+      run: go mod download
+
+    - name: Go Mod Verify
+      run: go mod verify
+
+    - name: Build
+      run: go build -v ./...
+
     - name: Lint code
       uses: golangci/golangci-lint-action@v6
       with:
         only-new-issues: true
-
-    - name: Build
-      run: go build -v ./...
 
     - name: Test
       run: go test --timeout=10s -v ./...
