--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,10 +30,11 @@ jobs:
     - name: Build
       run: go build -v ./...
 
+    - name: Test
+      run: go test --timeout=10s -v ./...
+
     - name: Lint code
       uses: golangci/golangci-lint-action@v6
       with:
+        version: v1.60.3
         only-new-issues: true
-
-    - name: Test
-      run: go test --timeout=10s -v ./...
