--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,9 +14,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: stable
 
     - name: Go Tidy
       run: go mod tidy && git diff --exit-code
@@ -36,4 +36,4 @@ jobs:
     - name: Lint code
       uses: golangci/golangci-lint-action@v6
       with:
-        version: v1.60.3
+        only-new-issues: true
