--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,7 +4,7 @@ run:
   issues-exit-code: 1
   tests: true
   skip-dirs-use-default: true
-  modules-download-mode: vendor
+  modules-download-mode: readonly
 
 linters:
   enable:
