--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: stable
+        go-version: 1.23
 
     - name: Go Tidy
       run: go mod tidy && git diff --exit-code
@@ -25,13 +25,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test --timeout=10s -v ./...
-
-    - name: Go Format
-      run: gofmt -s -w . && git diff --exit-code
-
-    - name: Go Vet
-      run: go vet ./...
+      run: go test --count=1 --timeout=30s -v ./...
 
     - name: Lint code
       uses: golangci/golangci-lint-action@v6
